usesafe certification card

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -412,6 +412,7 @@
       "dashboard": "Dashboard",
       "productManagement": "Product Management",
       "products": "Products",
+      "documents": "Documents",
       "supplyChainManagement": "Supply Chain Management",
       "suppliers": "Suppliers",
       "myProducts": "My Products",
@@ -571,15 +572,17 @@
         "category": "Category",
         "status": "Status",
         "addedDate": "Added Date",
-        "manufacturer": "Manufacturer"
+        "manufacturer": "Manufacturer",
+        "seller": "Seller",
+        "taxNumber": "Tax Number"
       },
       "certifications": {
-        "title": "Certifications",
+        "title": "Documents",
         "loadingCertifications": "Loading certifications...",
         "noCertifications": "No certifications found",
         "table": {
-          "name": "Certificate",
-          "issuedBy": "Issued By",
+          "name": "Document",
+          "documentType": "Document Type",
           "validUntil": "Valid Until",
           "status": "Status",
           "document": "Document"
@@ -630,67 +633,45 @@
           "water-saving": "Water Saving"
         }
       },
-      "battery": {
-        "features": {
-          "0": "Advanced lithium-ion technology for optimal performance",
-          "1": "Built-in safety features and protection circuits",
-          "2": "Extended cycle life and reliable power output"
+      "usesafeCertification": {
+        "title": "UseSafe Certification",
+        "description": "View product UseSafe certification status and compliance metrics",
+        "progress": "Certification Progress",
+        "certified": "Certified",
+        "notCertified": "Not Certified",
+        "requirementProgress": "Minimum {required}% required for certification",
+        "certificationAchieved": "🎉 Congratulations! This product is UseSafe Certified",
+        "certificationDescription": "This product meets all UseSafe certification requirements and can be trusted for quality and safety standards.",
+        "company": {
+          "title": "Company Documents",
+          "allApproved": "All company documents approved",
+          "hasPending": "Some company documents pending review",
+          "hasRejected": "Some company documents rejected",
+          "noDocuments": "No company documents uploaded",
+          "incomplete": "Company documents incomplete"
         },
-        "healthAndSafety": {
-          "title": "Health and Safety Measures",
-          "measures": {
-            "0": "Always handle batteries with care",
-            "1": "Keep in upright position at all times",
-            "2": "Charge in a well-ventilated area",
-            "3": "Do not add pure water (Pure water level should be 1.5 cm above plates)",
-            "4": "Always wear protective goggles suitable for working conditions during battery maintenance (adding water, cleaning, charging)",
-            "5": "Wear protective clothing if there is a risk of acid splashing"
-          }
+        "documents": {
+          "title": "Product Documents",
+          "allApproved": "All product documents approved",
+          "hasPending": "Some product documents pending review",
+          "hasRejected": "Some product documents rejected",
+          "noDocuments": "No product documents uploaded",
+          "incomplete": "Product documents incomplete"
         },
-        "storage": {
-          "title": "Storage and Installation Guidelines",
-          "sections": {
-            "general": "General Storage",
-            "chargeLevel": "Charge Level Monitoring",
-            "installation": "Installation Steps",
-            "items": {
-              "general": {
-                "0": "Always store upright in a dry and cool place (10°C - 25°C)",
-                "1": "Place batteries on wooden pallets to avoid direct contact with concrete floor"
-              },
-              "chargeLevel": {
-                "0": "Pre-sale battery charge level should be above 12.6V",
-                "1": "Minimum voltage during storage should be 12.4V",
-                "2": "If voltage is low, open package and charge at 16.1V and 1/20Cn current to prevent permanent damage"
-              },
-              "installation": {
-                "0": "Verify battery compatibility from vehicle manual",
-                "1": "Ensure engine is off",
-                "2": "Remove old battery (negative terminal first)",
-                "3": "Check for short circuits",
-                "4": "Clean battery compartment and terminals",
-                "5": "Install new battery (connect positive cable first)",
-                "6": "Check charging current compatibility"
-              }
-            }
-          }
+        "dpp": {
+          "title": "DPP Configuration",
+          "complete": "DPP configuration complete",
+          "incomplete": "DPP configuration {percentage}% complete",
+          "noConfig": "No DPP configuration found"
         },
-        "emergency": {
-          "title": "Emergency Procedures",
-          "procedures": {
-            "contact": "In case of eye or skin contact, rinse with plenty of water.",
-            "clothing": "Remove contaminated clothing immediately.",
-            "ingestion": "If swallowed: Drink plenty of water and milk. Consult a doctor.",
-            "spill": "Spillage: Wash small spills with water.",
-            "gases": "If gases are released, ventilate the area.",
-            "spark": "Keep away from sparks and flames.",
-            "fire": "In case of fire, use appropriate fire extinguisher.",
-            "devices": "Turn off and remove electrical devices."
-          }
+        "extraCertifications": {
+          "title": "Extra Certifications",
+          "hasApproved": "Quality certifications approved",
+          "hasPending": "Some certifications pending review", 
+          "hasRejected": "Some certifications rejected",
+          "noCertifications": "No extra certifications uploaded",
+          "incomplete": "Extra certifications incomplete"
         }
-      },
-      "textile": {
-        "careInstructions": "Care Instructions"
       },
       "layoutNotAvailable": "DPP layout not available for product type:",
       "quickInfo": {
@@ -708,14 +689,14 @@
           "material": "Material",
           "percentage": "Percentage",
           "recyclable": "Recyclable",
-          "description": "Description",
-          "yes": "Yes",
-          "no": "No"
+          "description": "Description"
         },
         "recyclable": {
           "yes": "Yes",
           "no": "No"
-        }
+        },
+        "loading": "Loading materials...",
+        "noMaterials": "No materials found for this product."
       },
       "healthAndSafety": {
         "title": "Health and Safety",
@@ -2558,12 +2539,16 @@
       "list":{
         "title": "Products",
         "description": "Manage and review all products in the system",
+        "totalProducts": "products",
         "empty":{
-          "description": "Add a product to get started"
+          "description": "Add a product to get started",
+          "search": "No products match your search criteria"
         },
         "search":{
           "placeholder": "Search products..."
         },
+        "model": "Model",
+        "viewDetails": "View Details",
         "filter":{
           "all": "All",
           "active": "Active",
