--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -678,6 +678,9 @@
     "title": "Sertifikalı Ürünler",
     "description": "Dijital Ürün Pasaportu doğrulanmış sürdürülebilir ürünlerimizi keşfedin.",
     "loading": "Ürünler yükleniyor...",
+    "productLoading": "Ürün yükleniyor...",
+    "productNotFound": "Ürün bulunamadı",
+    "productNotFoundDescription": "ID: {productId}",
     "backToProducts": "Ürünlere Dön",
     "ProductDocuments": {
       "uploadNewDocument": "Yeni Belge Yükle",
