feat: add certificate upload button to settings page and fix production_permit type filtering

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -273,6 +273,7 @@
       "empty": {
         "title": "No certifications found",
         "description": "No certifications found for your company",
+        "upload": "Upload",
         "manufacturer": "No certifications found for your company",
         "addButton": "Add Product"
       },
