--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -3450,6 +3450,7 @@
       "empty": {
         "title": "Sertifika bulunamadı",
         "description": "Sertifika bulunamadı",
+        "upload": "Yükle",
         "manufacturer": "Bu şirket için sertifika bulunamadı",
         "addButton": "Ürün Ekle"
       },
