remove approval/rejection features from manufactured products page

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -331,8 +331,8 @@
   },
   "pages": {
     "pendingProducts": {
-      "title": "Pending Products",
-      "description": "List of products pending approval",
+      "title": "My Products",
+      "description": "List of my products",
       "columns": {
         "documents": "Documents"
       },
