Internationalize manufactured products page by replacing hard-coded Turkish text with translation keys

--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -510,6 +510,45 @@
     }
   },
   "dashboard": {
+    "manufacturedProducts": {
+      "errorLoadingProducts": "Ürünler yüklenirken hata oluştu",
+      "title": "Ürettiklerim",
+      "description": "Ürettiğim ürünler ve malzeme tedarikçileri",
+      "loading": "Ürünler yükleniyor...",
+      "noProductsAssigned": "Henüz Atanmış Ürün Yok",
+      "noProductsAssignedDescription": "Size üretici olarak atanan ürünler burada görünecek.",
+      "noProductsAssignedDescription2": "Marka sahipleri sizi üretici olarak seçtiklerinde ürünler bu sayfada listelenecek.",
+      "contractManufacturer": "Fason Üretim",
+      "model": "Model",
+      "brandOwner": "Marka Sahibi",
+      "unknownManufacturer": "Bilinmiyor",
+      "actions": "İşlemler",
+      "viewDocuments": "Belgeleri Görüntüle",
+      "viewProduct": "Ürünü Görüntüle",
+      "materialSuppliers": "Materyal Tedarikçileri",
+      "materialManufacturer": "Materyal Üreticisi",
+      "materialManufacturerAssign": "Materyal üreticisi atama işlemi için \"Üretici Ata\" butonunu kullanın",
+      "changeManufacturer": "Üreticiyi Değiştir",
+      "assignManufacturer": "Üretici Ata",
+      "noMaterialsAssigned": "Bu ürün için henüz materyal tanımlanmamış.",
+      "recyclable": {
+        "yes": "Geri Dönüştürülebilir",
+        "no": "Geri Dönüştürülemez"
+      },
+      "documentsTitle": "Ürün Belgeleri",
+      "materialAssignmentTitle": "Materyal Üreticisi Ata",
+      "material": "Materyal",
+      "product": "Ürün",
+      "currentManufacturer": "Mevcut Üretici",
+      "removeManufacturer": "Üreticiyi Kaldır",
+      "searchManufacturer": "Üretici Ara",
+      "searchManufacturerPlaceholder": "Üretici adı veya uzmanlık alanı ara...",
+      "currentManufacturers": "Mevcut Üreticiler",
+      "noManufacturersFound": "Arama kriterlerinize uygun üretici bulunamadı.",
+      "manufacturer": "Üretici",
+      "cancel": "İptal",
+      "save": "Kaydet"
+    },
     "title": "Kontrol Paneli",
     "welcome": "Hoş Geldiniz",
     "overview": {
@@ -808,6 +847,15 @@
       "materials": {
         "title": "Malzemeler",
         "description": "Ürünün malzeme bileşimi",
+        "productionChain": "Üretim Zinciri",
+        "productOwner": "Ürün Sahibi",
+        "contractManufacturer": "Fason Üretici",
+        "materialManufacturers": "Malzeme Üreticileri",
+        "assigned": "Atanmış",
+        "assignedBy": "tarafından atandı",
+        "noManufacturerAssigned": "Bu malzeme için henüz üretici atanmamış",
+        "supplier": "Tedarikçi",
+        "errorLoadingMaterials": "Malzemeler yüklenirken hata oluştu",
         "table": {
           "material": "Malzeme",
           "percentage": "Yüzde",
