feat: add minor translation update

--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -906,7 +906,8 @@
           "valid": "Geçerli",
           "expired": "Süresi Dolmuş",
           "pending": "Beklemede",
-          "approved": "Onaylandı"
+          "approved": "Onaylandı",
+          "rejected": "Reddedildi"
         },
         "actions": {
           "download": "İndir",
