feat: add i18n support to set-password page with English and Turkish translations

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2861,6 +2861,28 @@
         "passwordMismatch": "Passwords do not match"
       }
     },
+    "set-password": {
+      "title": "Set Your Password",
+      "description": "Please set a new password for your account",
+      "newPassword": "New Password",
+      "confirmPassword": "Confirm Password",
+      "newPasswordPlaceholder": "Enter your new password",
+      "confirmPasswordPlaceholder": "Confirm your new password",
+      "submit": "Set Password",
+      "submitting": "Setting...",
+      "success": {
+        "title": "Success",
+        "description": "Your password has been set successfully."
+      },
+      "error": {
+        "title": "Error",
+        "description": "Failed to set password. Please try again."
+      },
+      "validation": {
+        "minLength": "Password must be at least 8 characters",
+        "passwordMismatch": "Passwords do not match"
+      }
+    },
     "createAccount": {
       "title": "Create Account",
       "description": "Create a new account",
