fix: translate dashboard activity status and +more text to Turkish

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1777,6 +1777,7 @@
       }
     },
     "list": {
+      "more": "more",
       "title": "Product List",
       "description": "View and manage your products",
       "loading": "Loading products...",
