feat: Add i18n support to product edit component with full string translations

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1637,6 +1637,41 @@
   "productManagement": {
     "title": "Product Management",
     "description": "Manage and track all your products",
+    "edit":{
+      "editProduct":"Edit Product",
+      "productName":"Product Name",
+      "model":"Model",
+      "productType":"Product Type",
+      "productImages":"Product Images",
+      "addNewImage":"Add New Image",
+      "productDocuments":"Product Documents",
+      "pending":"Pending",
+      "rejected":"Rejected",
+      "approved":"Approved",
+      "type":"Type",
+      "uploadDate":"Upload Date",
+      "version":"Version",
+      "download":"Download",
+      "delete":"Delete",
+      "cancel":"Cancel",
+      "saveChanges":"Save Changes",
+      "rejectionReason":"Rejection Reason",
+      "addNewDocument":"Add New Document",
+      "back":"Back",
+      "primary":"Primary",
+      "addNewDocumentDescription":"Add new document description",
+      "documentFile":"Document File",
+      "documentType":"Document Type",
+      "selectDocumentType":"Select Document Type",
+      "technicalDocumentation":"Technical Documentation",
+      "testReports":"Test Reports",
+      "complianceDocuments":"Compliance Documents",
+      "certificates":"Certificates",
+      "other":"Other",
+      "uploadDocument":"Upload Document",
+      "deleteDocument":"Delete Document",
+      "deleteDocumentConfirmation":"Are you sure you want to delete this document?"
+    },
     "materials": {
       "title": "Materials",
       "description": "Manage and track all your materials",
