--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2568,6 +2568,41 @@
     "noProducts": "Ürün bulunamadı",
     "editProduct": "Ürünü Düzenle",
     "deleteProduct": "Ürünü Sil",
+    "edit":{
+      "editProduct":"Ürünü Düzenle",
+      "productName":"Ürün Adı",
+      "model":"Model",
+      "productType":"Ürün Tipi",
+      "productImages":"Ürün Görselleri",
+      "addNewImage":"Yeni Görsel Ekle",
+      "productDocuments":"Ürün Belgeleri",
+      "pending":"Beklemede",
+      "rejected":"Reddedildi",
+      "approved":"Onaylandı",
+      "type":"Tip",
+      "uploadDate":"Yükleme Tarihi",
+      "version":"Versiyon",
+      "download":"İndir",
+      "delete":"Sil",
+      "cancel":"İptal",
+      "saveChanges":"Değişiklikleri Kaydet",
+      "rejectionReason":"Reddedilme Sebebi",
+      "addNewDocument":"Yeni Belgeler Ekle",
+      "back":"Geri",
+      "primary":"Öne Çıkar",
+      "addNewDocumentDescription":"Yeni belge açıklaması ekleyin",
+      "documentFile":"Belge Dosyası",
+      "documentType":"Belge Tipi",
+      "selectDocumentType":"Belge Tipi Seçin",
+      "technicalDocumentation":"Teknik Belgeler",
+      "testReports":"Test Raporları",
+      "complianceDocuments":"Uyum Belgeleri",
+      "certificates":"Sertifikalar",
+      "other":"Diğer",
+      "uploadDocument":"Belge Yükle",
+      "deleteDocument":"Belge Sil",
+      "deleteDocumentConfirmation":"Bu belgeyi silmek istediğinizden emin misiniz?"
+    },
     "materials": {
       "title": "Materyaller",
       "description": "Materyallerinizi yönetin ve takip edin",
